log
Wed 08 May 2024 06:14:34 PM UTC: 
 tests:  1|8
total_score: 0/70
856021f
Wed 08 May 2024 06:19:01 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8d3ba36
Wed 08 May 2024 06:19:22 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
4b2ff65
Wed 08 May 2024 06:24:17 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:15: error: ‘TreeNode’ has no member named ‘key’
   80 |         if(aux-> key == key) return aux;
      |               ^~
treemap.c:80:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   80 |         if(aux-> key == key) return aux;
      |                                     ^~~
treemap.c:81:27: error: passing argument 1 of ‘nextTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   81 |         aux = nextTreeMap(aux);
      |                           ^~~
      |                           |
      |                           TreeNode *
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:23:30: note: expected ‘TreeMap *’ but argument is of type ‘TreeNode *’
   23 | Pair * nextTreeMap(TreeMap * tree);
      |                    ~~~~~~~~~~^~~~
In file included from test.c:4:
treemap.c:81:13: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   81 |         aux = nextTreeMap(aux);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
98f7f8f
Wed 08 May 2024 06:24:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:15: error: ‘TreeNode’ has no member named ‘key’
   80 |         if(aux-> key == key) return aux;
      |               ^~
treemap.c:80:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   80 |         if(aux-> key == key) return aux;
      |                                     ^~~
treemap.c:81:21: error: passing argument 1 of ‘nextTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   81 |         nextTreeMap(aux);
      |                     ^~~
      |                     |
      |                     TreeNode *
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:23:30: note: expected ‘TreeMap *’ but argument is of type ‘TreeNode *’
   23 | Pair * nextTreeMap(TreeMap * tree);
      |                    ~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
49487c8
Wed 08 May 2024 06:26:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:21: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   77 |     TreeNode *aux = firstTreeMap(tree);
      |                     ^~~~~~~~~~~~
treemap.c:80:15: error: ‘TreeNode’ has no member named ‘key’
   80 |         if(aux-> key == key) return aux;
      |               ^~
treemap.c:80:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   80 |         if(aux-> key == key) return aux;
      |                                     ^~~
treemap.c:81:21: error: passing argument 1 of ‘nextTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   81 |         nextTreeMap(aux);
      |                     ^~~
      |                     |
      |                     TreeNode *
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:23:30: note: expected ‘TreeMap *’ but argument is of type ‘TreeNode *’
   23 | Pair * nextTreeMap(TreeMap * tree);
      |                    ~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
a5d2335
Thu 09 May 2024 12:26:57 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
7246382
Thu 09 May 2024 12:28:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ace1ed1
Thu 09 May 2024 12:40:54 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ef11dab
Thu 09 May 2024 01:04:58 AM UTC: 
 treemap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
30b002f
Thu 09 May 2024 01:06:31 AM UTC: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
e5636b5
Thu 09 May 2024 02:23:47 AM UTC: 
 treemap.c | 44 +++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 43 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
07456c8
Thu 09 May 2024 02:38:24 AM UTC: 
 treemap.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:100:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  100 |     TreeNode *aux = x;
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
01063b1
Thu 09 May 2024 02:38:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
2e97e67
Thu 09 May 2024 02:39:42 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
e78cb24
Thu 09 May 2024 02:40:11 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:69:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   69 |         if(is_equal(tree, aux -> pair -> key, key))
      |         ^~
treemap.c:71:13: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   71 |             return;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5d2c211
Thu 09 May 2024 02:41:00 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:69:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   69 |         if(is_equal(tree, aux -> pair -> key, key))
      |         ^~
treemap.c:71:13: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   71 |             return;
      |             ^~~~~~
treemap.c:73:9: error: ‘else’ without a previous ‘if’
   73 |         else if(tree-> lower_than(key, aux -> pair -> key))
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
eb1c242
Thu 09 May 2024 02:42:06 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
c026418
Thu 09 May 2024 02:48:36 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
ee805bb
Thu 09 May 2024 02:49:12 AM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 15/70
e9bba0a
